--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,41 @@
 body {
-  font-family: sans-serif;
+  font-family: "Verdana, Arial, sans-serif";
+}
+
+td {
+  padding: 6px;
+  border-bottom: 1px solid gray;
+}
+
+th {
+  background-color: #b7d0ff;
+  font-weight: bold;
+  padding: 12px 0 12px 6px;
+}
+
+table {
+  border-collapse: collapse;
+  font-size: 16px;
+  text-align: left;
+
+  table-layout: fixed;
+  width: 100%;
+}
+
+.center {
+  margin: auto;
+  padding: 60px;
+  width: 60%;
+}
+
+h1 {
+  text-align: center;
+}
+
+tr {
+  background-color: #ffffff;
+}
+
+tr:nth-of-type(2n) {
+  background-color: #f2f2f2;
 }
