--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,14 @@ h1 {
   text-align: center;
 }
 
+.lowEmployment {
+  background-color: #ff9e9e;
+}
+
+.highEmployment {
+  background-color: #abffbd;
+}
+
 tr {
   background-color: #ffffff;
 }
